--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-.gitattributes export-ignore
-.gitignore export-ignore
-.travis.yml export-ignore
-tests/ export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/.travis.yml export-ignore
+/tests/ export-ignore
+/tools/ export-ignore
