--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
 		"issues": "https://github.com/nextras/static-router/issues"
 	},
 	"require": {
-		"php": "~5.3",
+		"php": ">=5.3",
 		"nette/application": "~2.2"
 	},
 	"require-dev": {
