composer: uses nette/application 3.0

--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,12 @@
 	},
 	"require": {
 		"php": ">=7.1",
-		"nette/application": "~2.4"
+		"nette/application": "~3.0"
 	},
 	"require-dev": {
 		"nette/tester": "~2.0"
 	},
+	"minimum-stability": "dev",
 	"autoload": {
 		"psr-4": { "Nextras\\Routing\\": "src/" }
 	},
