--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
 		"nette/application": "~3.0"
 	},
 	"require-dev": {
-		"nette/tester": "~2.0"
+		"nette/tester": "~2.0",
+		"phpstan/phpstan-shim": "^0.11.0@dev"
 	},
 	"minimum-stability": "dev",
 	"autoload": {
