--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
 	},
 	"require": {
 		"php": ">=7.1",
-		"nette/application": "~3.0"
+		"nette/http": "~3.0@rc",
+		"nette/routing": "~3.0@rc"
 	},
 	"require-dev": {
 		"nette/tester": "~2.0",
-		"phpstan/phpstan-shim": "^0.11.0@dev"
+		"phpstan/phpstan-shim": "^0.11.0"
 	},
-	"minimum-stability": "dev",
 	"autoload": {
 		"psr-4": { "Nextras\\Routing\\": "src/" }
 	},
