--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 	},
 	"require-dev": {
 		"nette/tester": "~2.0",
-		"phpstan/phpstan-shim": "^0.11.0"
+		"phpstan/phpstan": "^0.12"
 	},
 	"autoload": {
 		"psr-4": { "Nextras\\Routing\\": "src/" }
